--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="playground.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Drag & Scale Playground</title>
   </head>
   <body>
     <div id="playground"></div>
     <div id="main"></div>
-    <script src="playground.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
