--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="playground"></div>
     <div id="main"></div>
+    <div id="header"></div>
     <script src="index.js"></script>
   </body>
 </html>
