Fixed header position

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div id="playground"></div>
-    <div id="main"></div>
-    <div id="header"></div>
+    <div id="main">
+    <div id="header">Drag me!</div>
+    </div>
+    
     <script src="index.js"></script>
   </body>
 </html>
